<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:id="@+id/rl_area"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/abs__spinner_ab_default_holo_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/countries_and_areas"
                android:textColor="#353535"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/china"
                android:textColor="#45c01a"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_usertel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/iv_del"
                android:background="@drawable/edittext_login"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="11"
                android:paddingLeft="90dp"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_tel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_usertel"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:text="+86"
                android:textColor="#353535"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/delete"
                android:visibility="gone" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/iv_del2"
                android:background="@drawable/edittext_login"
                android:hint="@string/hint_pwd"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="90dp"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/password"
                android:textColor="#353535"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_del2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/delete"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_btn_green"
            android:enabled="false"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/login1"
            android:textColor="#88b9b6b6"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_sms_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/use_msm_code"
            android:textColor="@color/txt_blue"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/forget_pwd"
            android:textColor="@color/txt_blue"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:background="#dbdbdb" />

        <TextView
            android:id="@+id/tv_use_other_style"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="2"
            android:gravity="left"
            android:text="@string/use_other_login"
            android:textColor="@color/txt_blue"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>